--- a/src/pages/slide-show/SlideShow.module.scss
+++ b/src/pages/slide-show/SlideShow.module.scss
@@ -9,7 +9,8 @@
 
     .slideContainer {
         width: 100%;
-        height: 400px;
+        height: 450px;
+        padding: 0px 24px;
 
         .swiper {
             width: 100%;
