--- a/src/pages/home/components/target-date/TargetDate.module.scss
+++ b/src/pages/home/components/target-date/TargetDate.module.scss
@@ -9,7 +9,7 @@
         .day{
             position: absolute;
             font-size: 36px;
-            color: var(--accent);
+            color: var(--primary);
             top: 10px;
             left: 50%;
             transform: translate(-50%, -50%);
