--- a/src/pages/footer/Footer.module.scss
+++ b/src/pages/footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer{
     width: 100%;
     height: auto;
-    background-color: var(--background-alt);
+    background-color: var(--warning);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,7 +38,7 @@
         }
 
         .name{
-            color: var(--primary);       
+            color: #fff;
             font-size: 18px;   
         }
 
