--- a/src/pages/home/components/countdown/CountdownCustom.module.scss
+++ b/src/pages/home/components/countdown/CountdownCustom.module.scss
@@ -13,7 +13,7 @@
 
         * {
             font-size: 20px;
-            color: var(--primary);
+            color: var(--secondary);            
         }
     }
 
