--- a/src/pages/slide-show/SlideShow.module.scss
+++ b/src/pages/slide-show/SlideShow.module.scss
@@ -8,9 +8,8 @@
     gap: 16px;
 
     .slideContainer {
-        width: 100%;
-        height: 475px;
-        padding: 0px 24px;
+        width: 90vw;
+        height: 475px;        
 
         .swiper {
             width: 100%;
