--- a/src/pages/slide-show/SlideShow.module.scss
+++ b/src/pages/slide-show/SlideShow.module.scss
@@ -10,6 +10,7 @@
     .slideContainer {
         width: 90vw;
         height: 475px;        
+        max-width: 450px;
 
         .swiper {
             width: 100%;
