--- a/src/pages/places/components/place-item/PlaceItem.module.scss
+++ b/src/pages/places/components/place-item/PlaceItem.module.scss
@@ -1,6 +1,6 @@
 .place {
     width: 300px;
-    height: 400px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,7 +63,6 @@
 
     .place {
         width: 350px;
-        height: 450px;
         justify-content: space-between;
 
         .reason {
