--- a/src/pages/ticket/Ticket.module.scss
+++ b/src/pages/ticket/Ticket.module.scss
@@ -12,18 +12,27 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        gap: 16px;
+        gap: 8px;
         padding: 24px;
         background-color: #fff;
         position: relative;
         border-radius: 15px 15px 0px 0px;
 
+        .title{
+            width: 100%;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            text-align: center;
+            font-weight: 500;
+            font-size: 24px;
+        }
+
         .name{
             width: 100%;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             text-align: center;
-            font-weight: bold;
+            font-weight: 500;
             font-size: 32px;
+            text-decoration: underline;
         }
 
         .textContainer{
