--- a/src/pages/ticket/components/text-item/TextItem.module.scss
+++ b/src/pages/ticket/components/text-item/TextItem.module.scss
@@ -3,16 +3,17 @@
     width: 100%;
     
     .label{        
-        font-family: 'Courier New', Courier, monospace;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         text-align: left;
         font-weight: bold;
         font-size: 18px;
     }
 
     .value{
-        font-family: 'Courier New', Courier, monospace;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         text-align: right;
         font-size: 18px;
+        font-weight: 400;
     }
 
 }
