--- a/src/pages/ticket/components/header-ticket/HeaderTicket.module.scss
+++ b/src/pages/ticket/components/header-ticket/HeaderTicket.module.scss
@@ -1,11 +1,11 @@
-.headerTicket{
+.headerTicket {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    .text{
-        font-size: 28px;
-        font-family: 'Courier New', Courier, monospace;
+    .text {
+        font-size: 24px;
+        font-family: 'Work Sans', sans-serif;
         font-weight: bold;
         color: #000;
     }
