--- a/src/pages/ticket/components/text-item/TextItem.module.scss
+++ b/src/pages/ticket/components/text-item/TextItem.module.scss
@@ -3,16 +3,16 @@
     width: 100%;
     
     .label{        
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: "Work Sans", serif;
         text-align: left;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .value{
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: "Work Sans", serif;
         text-align: right;
-        font-size: 18px;
+        font-size: 14px;
         font-weight: 400;
     }
 
