--- a/src/pages/ticket/components/text-item/TextItem.module.scss
+++ b/src/pages/ticket/components/text-item/TextItem.module.scss
@@ -1,19 +1,21 @@
-.textItem{
+.textItem {
 
     width: 100%;
-    
-    .label{        
+
+    .label {
         font-family: "Work Sans", serif;
         text-align: left;
         font-weight: bold;
         font-size: 14px;
+        color: var(--primary);
     }
 
-    .value{
+    .value {
         font-family: "Work Sans", serif;
         text-align: right;
         font-size: 14px;
         font-weight: 400;
+        color: var(--primary);
     }
 
 }
