--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -1,13 +1,14 @@
 .home {
-    position: relative; /* Asegúrate de que el contenedor principal tenga posición relativa */
+    position: relative;
+    /* Asegúrate de que el contenedor principal tenga posición relativa */
     height: 100dvh;
     display: flex;
     flex-direction: column;
-    padding: 16px 40px;
+    padding: 16px 24px;
     text-align: center;
     justify-content: center;
     gap: 16px;
-    background-image: url('/src/assets/img/background.jpg');
+    background-image: url('/src/assets/img/background.gif');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -19,22 +20,18 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
-        justify-content: space-between;
-
-        .introduction {
-            font-size: 18px;
-            color: var(--secondary);
-        }
 
         .title {
-            font-size: 34px;
-            color: var(--secondary);
+            font-size: 38px;
+            color: var(--primary);
+            font-family: Dancing Script, cursive;
         }
 
         .name {
             font-size: 58px;
             color: var(--primary);
             font-family: Dancing Script, cursive;
+            line-height: 1;
         }
 
         .summary {
@@ -55,20 +52,28 @@
             width: 150px;
             height: 200px;
             border-radius: 50%;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .text {
+            flex: 1;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 24px 0px
         }
     }
 
 
 }
 
-.home::before {
+/* .home::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(255, 255, 255, 0.5); /* Color de fondo con opacidad */
-    z-index: -1; /* Asegura que el pseudo-elemento esté detrás del contenido */
-}
+    background-color: rgba(255, 255, 255, 0.4);
+    z-index: -1; 
+} */
