--- a/src/pages/home/components/countdown/CountdownCustom.module.scss
+++ b/src/pages/home/components/countdown/CountdownCustom.module.scss
@@ -12,8 +12,8 @@
         flex-direction: column;        
 
         * {
-            font-size: 20px;
-            color: var(--secondary);            
+            font-size: 24px;
+            color: var(--primary);            
         }
     }
 
