first version wedding

--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -22,11 +22,11 @@
         color: #fff;
 
         button{
-            background-color: var(--primary);
+            background-color: var(--accent);
         }
 
         .speedDialAction{
-            background-color: var(--secondary);
+            background-color: var(--warning);
             color: #fff;
         }
 
