--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -23,13 +23,14 @@
 
         .title {
             font-size: 38px;
-            color: var(--primary);
+            color: #fff;
             font-family: Dancing Script, cursive;
+            padding: 24px 0px;
         }
 
         .name {
             font-size: 58px;
-            color: var(--primary);
+            color: #fff;
             font-family: Dancing Script, cursive;
             line-height: 1;
         }
@@ -37,13 +38,13 @@
         .summary {
             margin: 16px 0px;
             font-size: 14px;
-            color: var(--primary);
+            color: #fff;
         }
 
         .await {
             font-size: 28px;
             font-weight: bold;
-            color: var(--primary);
+            color: #fff;
         }
 
         .photo {
@@ -55,15 +56,48 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
 
-        .text {
+        .cardContainer {
             flex: 1;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 24px 0px
+            padding: 24px 0px;
+
+            .card {
+                padding: 16px;
+                background: rgba(144, 19, 254, 0.25);
+                box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+                backdrop-filter: blur(2px);
+                -webkit-backdrop-filter: blur(2px);
+                border-radius: 10px;
+
+                .text {
+                    color: #fff;
+                    font-family: Dancing Script, cursive;
+                }
+            }
         }
     }
 
+
+}
+
+@media (width >=992px) {
+
+    .home {
+
+        .container {
+
+            .cardContainer {
+                .card {
+                    .text {
+                        font-size: 18px;
+                    }
+                }
+            }
+        }
+
+    }
 
 }
 
