--- a/src/pages/home/components/target-date/TargetDate.module.scss
+++ b/src/pages/home/components/target-date/TargetDate.module.scss
@@ -11,7 +11,7 @@
         .day{
             position: absolute;
             font-size: 36px;
-            color: var(--primary);
+            color: #fff;
             top: -18px;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -20,7 +20,7 @@
         .month{
             position: absolute;
             font-size: 16px;
-            color: var(--primary);
+            color: #fff;
             bottom: -32px;
             left: 24%;            
         }
