--- a/src/pages/home/components/target-item/TargetItem.module.scss
+++ b/src/pages/home/components/target-item/TargetItem.module.scss
@@ -6,12 +6,12 @@
 
     .divider {    
         height: 1px;
-        background-color: var(--primary);
+        background-color: #fff;
         box-shadow: 0 2px 6px rgba(255, 255, 255, 0.3); /* Sombra suave y ligera */
     }
 
     .label {
-        color: var(--primary);
+        color: #fff;
     }
 
 }
