--- a/src/components/vertical-timeline/VerticalTimeLine.module.scss
+++ b/src/components/vertical-timeline/VerticalTimeLine.module.scss
@@ -11,7 +11,7 @@
         .verticalLine{
             width: 2px;
             height: 100%;
-            background-color: var(--primary);
+            background-color: var(--secondary);
             position: absolute;
             left: 50%;
             right: 50%;
