--- a/src/components/vertical-timeline/components/timeline-item/Timelineitem.module.scss
+++ b/src/components/vertical-timeline/components/timeline-item/Timelineitem.module.scss
@@ -22,12 +22,6 @@
                 height: 85px;
             }
     
-            .separator {
-                width: 24px;
-                height: 2px;
-                background-color: var(--primary);
-            }
-    
             .hour {
                 width: 100%;
                 font-weight: bold;
@@ -36,6 +30,10 @@
 
             .description {
                 width: 100%;                
+            }
+
+            .icon{                
+                color: var(--secondary);
             }
 
         }
