--- a/src/components/vertical-timeline/components/timeline-item/Timelineitem.module.scss
+++ b/src/components/vertical-timeline/components/timeline-item/Timelineitem.module.scss
@@ -26,10 +26,12 @@
                 width: 100%;
                 font-weight: bold;
                 font-family: "Work Sans", serif;
+                font-size: 16px;
             }
 
             .description {
                 width: 100%;                
+                font-size: 20px;
             }
 
             .icon{                
