--- a/src/components/vertical-timeline/components/timeline-item/Timelineitem.module.scss
+++ b/src/components/vertical-timeline/components/timeline-item/Timelineitem.module.scss
@@ -36,6 +36,7 @@
 
             .icon{                
                 color: var(--secondary);
+                padding-left: 2px;
             }
 
         }
