--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -80,7 +80,32 @@
         }
     }
 
+    .hand {
+        font-size:20px;
+        color: #fff;
+        position: absolute;
+        bottom: 10%;
+        left: 50%;
+        right: 50%;
+        z-index: 120;
+        animation: bounce 1.5s infinite ease-in-out;
+    }
 
+
+}
+
+@keyframes bounce {
+
+    0%,
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    50% {
+        transform: translateY(10px);
+        opacity: 0.5;
+    }
 }
 
 @media (width >=992px) {
