--- a/src/pages/confirm/Confirm.module.scss
+++ b/src/pages/confirm/Confirm.module.scss
@@ -25,7 +25,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: var(--secondary);
+        background-color: var(--accent);
         color: #fff;
         font-size: 20px;
         padding: 8px 16px;
