--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -22,7 +22,7 @@
         color: #fff;
 
         button{
-            background-color: var(--accent);
+            background-color: var(--secondary);
         }
 
         .speedDialAction{
