--- a/src/pages/footer/Footer.module.scss
+++ b/src/pages/footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer{
     width: 100%;
     height: auto;
-    background-color: var(--warning);
+    background-color: var(--accent);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,7 +12,7 @@
     .text{
         font-size: 24px;
         color: #fff;
-        text-shadow: 5px 2px 3px var(--secondary);
+        text-shadow: 5px 2px 3px var(--primary);
     }
 
     .info{
@@ -38,7 +38,7 @@
         }
 
         .name{
-            color: #fff;
+            color: var(--primary);
             font-size: 18px;   
         }
 
