--- a/src/pages/home/components/target-date/TargetDate.module.scss
+++ b/src/pages/home/components/target-date/TargetDate.module.scss
@@ -10,8 +10,8 @@
 
         .day{
             position: absolute;
-            font-size: 36px;
-            color: #fff;
+            font-size: 40px;
+            color: var(--secondary);
             top: -18px;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -20,7 +20,7 @@
         .month{
             position: absolute;
             font-size: 16px;
-            color: #fff;
+            color: var(--secondary);
             bottom: -32px;
             left: 24%;            
         }
