--- a/src/pages/home/components/target-item/TargetItem.module.scss
+++ b/src/pages/home/components/target-item/TargetItem.module.scss
@@ -6,12 +6,13 @@
 
     .divider {    
         height: 1px;
-        background-color: #fff;
+        background-color: var(--secondary);
         box-shadow: 0 2px 6px rgba(255, 255, 255, 0.3); /* Sombra suave y ligera */
     }
 
     .label {
-        color: #fff;
+        font-size: 18px;
+        color: var(--secondary);
     }
 
 }
