--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 :root {
@@ -21,7 +21,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: 'Oregano', cursive;
+  font-family: 'Great Vibes', cursive;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
