--- a/src/components/buttons/button-heart/ButtonHeart.module.scss
+++ b/src/components/buttons/button-heart/ButtonHeart.module.scss
@@ -6,29 +6,47 @@
     .heart {
         font-size: 60px;
         color: var(--accent);
-        animation: logoAnimated 3s linear infinite;
+        animation: pulse 3s infinite;
     }
 
-    @keyframes logoAnimated {
+    .hand {
+        color: var(--primary);
+        position: absolute;
+        position: absolute;
+        bottom: 10%;
+        left: 50%;
+        right: 50%;
+        z-index: 120;
+        animation: bounce 1.5s infinite ease-in-out;
+    }
+
+    @keyframes pulse {
         0% {
-            transform: scale(0.8)
+            transform: scale(0.8);
         }
 
         50% {
-            transform: scale(1.2)
+            transform: scale(1.0);
         }
 
         100% {
-            transform: scale(0.8)
+            transform: scale(0.8);
         }
     }
 
-    .touch{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: var(--primary)
+    @keyframes bounce {
+
+        0%,
+        100% {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        50% {
+            transform: translateY(10px);
+            opacity: 0.5;
+        }
     }
+
 
 }
