--- a/src/pages/card-presentation/CardPresentation.module.scss
+++ b/src/pages/card-presentation/CardPresentation.module.scss
@@ -16,11 +16,13 @@
         -webkit-backdrop-filter: blur(2px);
         border-radius: 10px;
         padding: 24px 16px;
+        border: 1px solid var(--primary);
 
         .mainText {
             font-weight: bold;
-            font-size: 20px;
+            font-size: 28px;
             text-align: center;
+            font-family: 'Great Vibes', cursive;
         }
 
         .presentation {
