--- a/src/pages/ticket/components/text-item/TextItem.module.scss
+++ b/src/pages/ticket/components/text-item/TextItem.module.scss
@@ -7,7 +7,7 @@
         text-align: left;
         font-weight: bold;
         font-size: 14px;
-        color: var(--primary);
+        color: #666;
     }
 
     .value {
@@ -15,7 +15,7 @@
         text-align: right;
         font-size: 14px;
         font-weight: 400;
-        color: var(--primary);
+        color: #666;
     }
 
 }
