--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -74,7 +74,7 @@
                 .text {
                     font-size: 18px;
                     color: #fff;
-                    font-family: Dancing Script, cursive;
+                    font-family: 'Great Vibes', cursive;
                 }
             }
         }
@@ -126,14 +126,3 @@
     }
 
 }
-
-/* .home::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(255, 255, 255, 0.4);
-    z-index: -1; 
-} */
