--- a/src/pages/ticket/Ticket.module.scss
+++ b/src/pages/ticket/Ticket.module.scss
@@ -20,11 +20,11 @@
 
         .title {
             width: 100%;
-            font-family: "Work Sans", serif;
+            font-family: 'Great vibes', cursive;
             text-align: center;
             font-weight: 400;
-            font-size: 18px;
-            color: var(--primary);
+            font-size: 28px;
+            color: #666;
         }
 
         .name {
@@ -34,7 +34,7 @@
             font-weight: 600;
             font-size: 28px;
             text-decoration: underline;
-            color: var(--primary);
+            color: #666;
         }
 
         .textContainer {
