--- a/src/pages/ticket/components/header-ticket/HeaderTicket.module.scss
+++ b/src/pages/ticket/components/header-ticket/HeaderTicket.module.scss
@@ -7,7 +7,7 @@
         font-size: 24px;
         font-family: 'Work Sans', sans-serif;
         font-weight: bold;
-        color: var(--primary);
+        color: #666;
     }
 
 }
