--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -50,7 +50,7 @@
         .photo {
             margin-left: auto;
             margin-right: auto;
-            width: 150px;
+            width: 200px;
             height: 200px;
             border-radius: 50%;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
@@ -83,6 +83,7 @@
             display: flex;
             flex-direction: column;
             gap: 8px;
+            margin: 16px 0px;
 
             .await{
                 font-size: 24px;
@@ -90,9 +91,15 @@
             }
             
         }
+
+        img{
+            width: 200px;
+            height: 200px;
+            margin: 16px auto 16px auto;
+        }
     }
 
-    .hand {
+    .hand { 
         font-size:20px;
         color: #fff;
         position: absolute;
