--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -8,7 +8,7 @@
     text-align: center;
     justify-content: center;
     gap: 16px;
-    background-image: url('/src/assets/img/background.gif');
+    background-image: url('/src/assets/img/background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -20,16 +20,24 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+        padding: 24px 18px;
+
+        img {
+            width: 150px;
+            height: 150px;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
         .title {
-            font-size: 38px;
+            font-size: 40px;
             color: #fff;
             font-family: Dancing Script, cursive;
             padding: 24px 0px;
         }
 
         .name {
-            font-size: 58px;
+            font-size: 48px;
             color: #fff;
             font-family: Dancing Script, cursive;
             line-height: 1;
@@ -65,8 +73,8 @@
 
             .card {
                 padding: 16px;
-                background: rgba(144, 19, 254, 0.25);
-                box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+                background: rgba(144, 19, 254, 0.1);
+                box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
                 backdrop-filter: blur(2px);
                 -webkit-backdrop-filter: blur(2px);
                 border-radius: 10px;
@@ -81,7 +89,7 @@
     }
 
     .hand {
-        font-size:20px;
+        font-size: 20px;
         color: #fff;
         position: absolute;
         bottom: 10%;
@@ -125,4 +133,15 @@
 
     }
 
+}
+
+.home::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.4);
+    z-index: -1;
 }
